feat(phase7): add i18n support to workflows
Adds internationalization support to workflow templates using config/i18n/*.yml.

Updated Workflows:
- feature-full.yml (v1.1.0): Added i18n header and i18n_key to all phases
- feature-quick.yml (v1.1.0): Added i18n header and i18n_key to all phases
- bugfix.yml (v1.1.0): Added i18n header
- hotfix.yml: Already had i18n support (v2.0.0)
- refactor.yml (v1.1.0): Added i18n header
- code-review.yml (v1.1.0): Added i18n header
- feature-tdd.yml (v1.1.0): Added i18n header

Changes:
- Added i18n.key field referencing config/i18n/*.yml keys
- Added i18n_key to phases for runtime translation
- Updated workflow versions to 1.1.0
- Maintains backward compatibility (English strings as fallback)

How it works:
When Nexus executes workflows, it can now:
1. Read locale from config/defaults.yml (pt-BR default, en-US fallback)
2. Load appropriate translations from config/i18n/*.yml
3. Use translated strings for workflow/phase names
4. Fall back to English if translation missing

Examples:
- workflows.feature_full.name:
  • pt-BR: "Desenvolvimento Completo de Funcionalidade"
  • en-US: "Full Feature Development"

- nexus.phases.brainstorming:
  • pt-BR: "Refinando requisitos"
  • en-US: "Refining requirements"

Part of: Phase 7/9 (Multi-language Workflows)
Previous: Phase 6 (commit bd6fcf9)

--- a/skills/nexus/workflows/bugfix.yml
+++ b/skills/nexus/workflows/bugfix.yml
@@ -1,6 +1,10 @@
 name: "Bugfix Workflow"
 description: "Quick workflow for bug fixes - minimal overhead, maximum speed"
-version: "1.0.0"
+version: "1.1.0"
+
+# i18n support
+i18n:
+  key: "workflows.bugfix"  # See config/i18n/*.yml
 
 triggers:
   keywords: ["fix", "debug", "resolve", "repair", "bug"]
