--- a/skills/nexus/workflows/refactor.yml
+++ b/skills/nexus/workflows/refactor.yml
@@ -1,6 +1,10 @@
 name: "Refactor Workflow"
 description: "Code refactoring workflow with quality focus"
-version: "1.0.0"
+version: "1.1.0"
+
+# i18n support
+i18n:
+  key: "workflows.refactor"  # See config/i18n/*.yml
 
 triggers:
   keywords: ["refactor", "improve", "optimize", "clean"]
