feat!: convert to direct installation model (v3.0.0)
BREAKING CHANGE: Complete restructuring from marketplace-based to direct user installation

## What Changed

### Removed (Marketplace-specific)
- .claude-plugin/ directory (marketplace.json + plugin.json)
- CONTRIBUTING.md (will recreate if needed)
- lib/ directory (empty)

### Added (Direct Installation)
- install.sh - Automated installer with backup support
- uninstall.sh - Clean uninstaller with user data backup
- .gitignore - Ignore user-generated data directories

### Changed
- README.md - Completely rewritten for direct installation
- CHANGELOG.md - Added v3.0.0 breaking change documentation
- config/defaults.yml - Updated repository URL (hmc-marketplace → HMC-TECHNOLOGIES)
- Version bumped to 3.0.0

## Migration Path

OLD (v2.x - marketplace):
/plugin marketplace add dirgogoo/HMC-TECHNOLOGIES

NEW (v3.0 - direct):
git clone https://github.com/dirgogoo/HMC-TECHNOLOGIES.git
cd HMC-TECHNOLOGIES
./install.sh

## Why This Change?

Marketplace model issues:
- Installation errors (plugin not found, schema validation)
- Cache conflicts between versions
- Dependency on Claude Code marketplace infrastructure
- Limited user control

Direct installation benefits:
- Complete control over installation
- No marketplace dependencies
- Easier debugging (files in ~/.claude/)
- Simpler updates (git pull + reinstall)
- Better backup (direct access to user data)
- Cross-platform compatibility

## Installation Targets

Commands → ~/.claude/commands/
Skills → ~/.claude/skills/
Config → ~/.claude/config/
Hooks → ~/.claude/hooks/

Policies Applied: 8.1 (Commit Message Format), 3.17 (Documentation)

--- a/config/defaults.yml
+++ b/config/defaults.yml
@@ -100,9 +100,9 @@ developer:
 
 # Marketplace Metadata
 marketplace:
-  name: "HMC Technologies Marketplace"
-  version: "2.0.0"
-  repository: "https://github.com/dirgogoo/hmc-marketplace"
+  name: "HMC Technologies"
+  version: "3.0.0"
+  repository: "https://github.com/dirgogoo/HMC-TECHNOLOGIES"
   organization: "HMC Technologies"
 
   # Auto-update settings
